# cargo-nixpackage

./: Cargo.toml  README.md  flake.nix
src/: main.rs
src/cli/: mod.rs
src/template/: mod.rs
template/: flake_template.nix
