[package]
name = "cargo-nixpackage"
version = "0.1.1"
edition = "2024"
description = "A small utility to scaffold Rust projects with Nix Flake support."
license-file = "./LICENSE"
readme = "./README.md"
keywords = [ 'nixos', 'nix-shell', 'nix-utils' ]
categories = [ "command-line-utilities", 'development-tools::cargo-plugins' ]

[build]
targer = "./target"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4", features = [ 'derive' ] }
tera = "1.20.0"
